# dog-classifier

./: Dockerfile  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
logs/catdog_classification/version_0/: events.out.tfevents.1727344996.satyajitgha-lightningte-6g354jrvb37.7992.0  events.out.tfevents.1727345011.satyajitgha-lightningte-6g354jrvb37.7992.1
logs/catdog_classification/version_1/: events.out.tfevents.1727345599.satyajitgha-lightningte-6g354jrvb37.10645.0  events.out.tfevents.1727345617.satyajitgha-lightningte-6g354jrvb37.10645.1
logs/dog_classification/version_0/: events.out.tfevents.1727410996.satyajitgha-lightningte-6g354jrvb37.13942.0  events.out.tfevents.1727446143.satyajitgha-lightningte-6g354jrvb37.10817.0  events.out.tfevents.1727446171.satyajitgha-lightningte-6g354jrvb37.10817.1
logs/dog_classification/version_1/: events.out.tfevents.1727411333.satyajitgha-lightningte-6g354jrvb37.15291.0  events.out.tfevents.1727446433.satyajitgha-lightningte-6g354jrvb37.12257.0  events.out.tfevents.1727446453.satyajitgha-lightningte-6g354jrvb37.12257.1
predictions/: Bulldog_97_prediction.txt  Dachshund_41_prediction.txt  German Shepherd_91_prediction.txt  Labrador Retriever_85_prediction.txt  Rottweiler_86_prediction.txt
src/: eval.py  infer.py  train.py
src/datamodules/: catdog.py
src/models/: catdog_classifier.py
src/utils/: pylogger.py  rich_utils.py  utils.py
tests/: test_dog_classifier.py  test_dog_module.py
(+37 files in other folders)
